working on hovers

--- a/index.html
+++ b/index.html
@@ -38,10 +38,25 @@
       </div>
       <div class="searchBlock">
          <div class="searchForm">
-            <div class="inputDiv"></div>
+            <div class="inputDiv">
+               <textarea cols="30" rows="1" class="input"></textarea>
+               <img class="mic" src="http://1.bp.blogspot.com/-lINg3E20_4Y/VebwdAy_MaI/AAAAAAAAFJU/8Jg2H-3-_cc/s1600/Microphone.png">
+            </div>
+            <div class="buttonDiv">
+               <input class="search button" type="submit" value="Google Search" aria-label="Google Search"></input>
+               <input class="lucky button" type="submit" value="I'm Feeling Lucky" aria-label="I'm Feeling Lucky"></input>
+            </div>
          </div>
       </div>
-      <div class="footer"></div>
+      <div class="footer">
+         <a href="" class="fLeft textLink fLink">Advertising</a>
+         <a href="" class="fLeft textLink fLink">Business</a>
+         <a href="" class="fLeft textLink fLink">About</a>
+         <a href="" class="fRight textLink fLink">Settings</a>
+         <a href="" class="fRight textLink fLink">Terms</a>
+         <a href="" class="fRight textLink fLink">Privacy</a>
+         <span class="space"></span>
+      </div>
    </div>
 </body>
 
