hover events complete

--- a/index.html
+++ b/index.html
@@ -25,22 +25,31 @@
             </div>
             <div class="bell inline">
                <!-- <div class="circle">-->
-                  <img class="bellImg" src="https://cdn2.iconfinder.com/data/icons/rounded-perfect/48/notification_bell-2-128.png" alt="">
+               <img class="bellImg opacity" src="https://cdn2.iconfinder.com/data/icons/rounded-perfect/48/notification_bell-2-128.png" alt="">
                <!-- </div> -->
             </div>
             <div class="appsLink inline">
-               <img class="appsImg" src="http://www.englewoodschools.net/cms/lib8/CO01900647/Centricity/Domain/1009/GoogleAppsIcon.png" alt="">
+               <img class="appsImg opacity" src="http://www.englewoodschools.net/cms/lib8/CO01900647/Centricity/Domain/1009/GoogleAppsIcon.png" alt="">
             </div>
          </div>
       </div>
       <div class="pictureBlock">
-         <img src="https://www.google.com/logos/doodles/2016/phoebe-snetsingers-85th-birthday-5179281716019200-hp.gif" alt="">
+         <div class="picNShare">
+            <img src="https://www.google.com/logos/doodles/2016/phoebe-snetsingers-85th-birthday-5179281716019200-hp.gif" alt="">
+            <div class="shareDiv">
+               <a href="">
+                  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAoklEQVR42mMwPnOGgQzsAMQzgfgBFM+EisHVkGvoGSD+j4bPIBtOjsEzsRgKwzMpMfgBHoMfDDqDnYH4MqlBgS+mZYB4JZIBt4iNPFwxfRZqwWcoH0RXALELsckNX0zD8GogliM22IiJkE9A7EpqJJMU0+QYjC8oLlPiYlyRd4vSMMaV3ECxX05JqiCEyU7HNM15w7MQoml5TLMahGZ1HlEYAERACd2PVVcUAAAAAElFTkSuQmCC" alt="">
+               </a>
+            </div>
+         </div>
       </div>
       <div class="searchBlock">
          <div class="searchForm">
             <div class="inputDiv">
                <textarea cols="30" rows="1" class="input"></textarea>
-               <img class="mic" src="http://1.bp.blogspot.com/-lINg3E20_4Y/VebwdAy_MaI/AAAAAAAAFJU/8Jg2H-3-_cc/s1600/Microphone.png">
+               <a href="">
+                  <img class="mic" src="http://1.bp.blogspot.com/-lINg3E20_4Y/VebwdAy_MaI/AAAAAAAAFJU/8Jg2H-3-_cc/s1600/Microphone.png">
+               </a>
             </div>
             <div class="buttonDiv">
                <input class="search button" type="submit" value="Google Search" aria-label="Google Search"></input>
